# datashare-python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  mkdocs.yml  ml-worker  pyproject.toml  requirements_dev.txt  requirements_doc.txt  requirements_overrides.txt  sitemap.xml
.data/: .gitignore
.github/workflows/: gh-pages.yml  linting.yml  publish.yml  publish_asr_worker.yml  publish_datashare_python.yml  publish_extract_worker.yml  publish_translation_worker.yml  publish_worker_template.yml  publish_workflows_worker.yml  test_asr_worker.yml  test_datashare_python.yml  test_doc.yml  test_extract_worker.yml  test_translation_worker.yml  test_worker_template.yml  test_workflows_worker.yml  tests.yml
.testcontainers/datashare/: run_datashare.sh
.testcontainers/temporal/: dynamic.yml  post-init.sh  pre-init.sh
asr-worker/: Dockerfile  pyproject.toml
asr-worker/asr_worker/: __main__.py  activities.py  config.py  constants.py  dependencies.py  models.py  objects.py  worker.py  workflow.py  workflows.py
asr-worker/asr_worker/cli/: __init__.py  models.py
asr-worker/entrypoints/: inference_gpu_worker.sh  io_worker.sh  preprocessing_worker.sh
asr-worker/tests/: conftest.py  test_activities.py  test_transcription.py  test_workflows.py
asr-worker/tests/e2e/asr/: test_transcription.py
datashare-python/: pyproject.toml
datashare-python/datashare_python/: .gitignore  config.py  conftest.py  constants.py  dependencies.py  discovery.py  exceptions.py  interceptors.py  local_client.py  logging_.py  objects.py  task_client.py  template.py  types_.py  utils.py  worker.py
datashare-python/datashare_python/cli/: __init__.py  local.py  project.py  task.py  tasks.py  worker.py
datashare-python/datashare_python/tasks/: classify_docs.py  dependencies.py  translate_docs.py
datashare-python/tests/: conftest.py  test_config.py  test_dependencies.py  test_discovery.py  test_interceptors.py  test_logging.py  test_object.py  test_objects.py  test_task_client.py  test_tasks.py  test_template.py  test_utils.py  test_worker.py
datashare-python/tests/cli/: test_cli_tasks.py  test_project.py  test_tasks.py  test_worker.py
datashare_python/: config.py  utils.py
docs/: faq.md  index.md
docs/get-started/: build.md  index.md  run.md  start-tasks.md
docs/guides/: datashare-index.md  dependency-injection.md  deploy-with-docker.md  failure-recovery.md  index.md  progress-updates.md  task-routing.md  task-workflows.md
docs/learn/: app.md  concepts-advanced.md  concepts-basic.md  concepts.md  datashare-app.md  execute-tasks.md  index.md  run-worker.md  tasks.md
docs/src/: basic_activities.py  basic_run_workflow.py  hello_world.py  (+9 more)
faq/: index.html
get-started/: index.html
guides/: index.html
learn/: index.html
ml_worker/: app.py  config.py  constants.py  objects.py  utils.py
ner-worker/: pyproject.toml
ner-worker/ner_worker/: activities.py  config_.py  core.py  dependencies.py  objects_.py  utils_.py  workflows.py
ner-worker/ner_worker/data/: .gitignore  spacy_models.json
ner-worker/ner_worker/spacy_/: ner.py  ner_label_scheme.py
ner-worker/tests/: conftest.py  test_activities.py  test_core.py  test_workflows.py
ner-worker/tests/spacy_/: test_ner.py
qa/: ruff.toml
scripts/: create-namespace.sh  lock-dist.sh  run_datashare.sh  setup-postgres-es.sh  worker_entrypoint.sh
search/: search_index.json
src/: activities.py  asr_activity.py  basic_app.py  basic_workflows.py  hello_world_app.py  hello_world_app_ds.py  naive_asr_activity.py  naive_dependencies.py  pyproject.toml  vectorize.py  vectorize_app.py  workflows.py
stylesheets/: extra.css
translation-worker/: README.md  pyproject.toml
worker-template/: pyproject.toml
worker-template/entrypoints/: classify_worker.sh  io_worker.sh  translate_worker.sh
worker-template/tests/: conftest.py  test_activities.py  test_classify.py  test_translate.py  test_utils.py  test_workflows.py
worker-template/worker_template/: activities.py  classify.py  config_.py  dependencies.py  objects.py  objects_.py  translate.py  workflows.py
workers/asr-worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
workers/asr-worker/asr_worker/: activities.py  config.py  constants.py  dependencies.py  models.py  objects.py  utils.py  workflows.py
workers/asr-worker/asr_worker/cli/: models.py  utils.py
workers/asr-worker/entrypoints/: cpu_worker.sh  inference_gpu_worker.sh  io_worker.sh  preprocessing_worker.sh
workers/asr-worker/tests/: __init__.py  conftest.py  test_activities.py  test_objects.py  test_workflows.py
workers/asr-worker/tests/cli/: test_asr_models.py
workers/extract-worker/: .dockerignore  Dockerfile  base-worker-deps-exclusion.txt  io-worker-deps-exclusion.txt  pyproject.toml
workers/extract-worker/entrypoints/: extract_cpu_mineru_worker.sh  extract_cpu_worker.sh  extract_gpu_mineru_worker.sh  extract_gpu_worker.sh  io_worker.sh
workers/extract-worker/extract_worker/: __init__.py  activities.py  config.py  constants.py  dependencies.py  mimetypes_.py  objects.py  workflows.py
workers/extract-worker/tests/: __init__.py  conftest.py  test_activities.py  test_workflows.py
workers/extract-worker/tests/resources/docs/: doc-2.docx
workers/translation-worker/: .dockerignore  Dockerfile  pyproject.toml
workers/translation-worker/entrypoints/: inference_gpu_worker.sh  inference_worker.sh  io_worker.sh
workers/translation-worker/tests/: conftest.py  test_activities.py  test_constants.py  test_hunyuan_translator.py  test_objects.py  test_translation.py  test_workflows.py
workers/translation-worker/translation_worker/: __init__.py  activities.py  config.py  constants.py  core.py  dependencies.py  objects.py  processors.py  sentence_splitters.py  utils.py  workflows.py
workers/translation-worker/translation_worker/translators/: __init__.py  argos.py  hunyuan.py
workers/workflows-worker/: .dockerignore  Dockerfile  README.md  all_workflows_worker_entrypoint.sh  bump_workflow.sh  main.py  pyproject.toml
(+48 files in other folders)
