[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project]
name = "asr-worker"
dynamic = ["version"]
description = "ASR Temporal task"
authors = [
    { name = "Lion Summerbell", email = "lsummerbell@icij.org" }
]
readme = "README.md"
requires-python = ">=3.11.0, <3.14"
dependencies = [
    "caul==0.2.16",
    "datashare-python~=0.3.0",
]

[project.optional-dependencies]
preprocessing = [
    "torchaudio==2.11.0",
    "torchcodec==0.11.0",
]
inference = [
    "caul[nemo]==0.2.16",
    "kaldialign==0.9.3",
    "ml-dtypes==0.5.4",
    "numpy==2.3.0",
    "pyarrow==20.0.0",
    "torchaudio==2.11.0",
    "torch==2.11.0",
    "torchcodec==0.11.0",
]
gpu = [ # just a placeholder to create an extra marker used to switch to torch gpu build
]

[project.entry-points."datashare.workflows"]
workflows = "asr_worker.workflows:REGISTRY"

[project.entry-points."datashare.activities"]
activities = "asr_worker.activities:REGISTRY"

[project.entry-points."datashare.dependencies"]
dependencies = "asr_worker.dependencies:REGISTRY"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "nest-asyncio>=1.6.0",
    "pre-commit>=4.5.1",
    "psutil>=6.1.0",
    "pylint~=3.1.0",
    "pytest~=8.1",
    "pytest-asyncio~=0.24",
    "pytest-timeout==2.4.0",
    "redis[hiredis]>=5.2.1",
    "ruff==0.15.2",
    "typing-extensions>=4.15.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", marker = "extra == 'gpu'" },
  { index = "pytorch-cpu", marker = "extra != 'gpu'"},
]
torchaudio = [
  { index = "pytorch-gpu", marker = "extra == 'gpu'" },
  { index = "pytorch-cpu", marker = "extra != 'gpu'"},
]
torchcodec = [
  { index = "pytorch-gpu", marker = "extra == 'gpu'" },
  { index = "pytorch-cpu", marker = "extra != 'gpu'"},
]
datashare-python = { path = "../datashare-python", editable = true }

[tool.uv]
package = true
override-dependencies = ["kaldialign>=0.9.3"]

[tool.uv.pip]
prerelease = "if-necessary"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["asr_worker"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "integration",
    "pull",
]
log_cli = 1
log_cli_level = "DEBUG"
log_file_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
