[project]
name = "datashare-python"
version = "0.1.3"
description = "Manage Python tasks and local resources in Datashare"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
  { name = "Lion Summerbell", email = "lsummerbell@icij.org" }
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
  "alive-progress~=3.2.0",
  "aiostream~=0.6.4",
  "aiohttp~=3.11.9",
  "icij-common[elasticsearch]~=0.7.3",
  "typer~=0.13.1",
  "temporalio~=1.23.0",
  "nest-asyncio~=1.6.0",
  "python-json-logger~=4.0.0",
]

[project.urls]
Homepage = "https://icij.github.io/datashare-python/"
Documentation = "https://icij.github.io/datashare-python/"
Repository = "https://github.com/ICIJ/datashare-python"
Issues = "https://github.com/ICIJ/datashare-python/issues"

[project.scripts]
datashare-python = "datashare_python.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "black>=26.1.0",
  "nest-asyncio>=1.6.0",
  "pre-commit>=4.5.1",
  "psutil>=6.1.0",
  "pylint~=3.1.0",
  "pytest~=8.1",
  "pytest-asyncio~=0.24",
  "redis[hiredis]>=5.2.1",
  "ruff==0.15.2",
  "typing-extensions>=4.15.0",
]
doc = [
  "mkdocs-material~=9.5.48",
  "termynal~=0.12.2",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration",
  "pull",
]
