[project]
name = "datashare-python"
version = "0.2.21"
description = "Manage Pythoœn tasks and local resources in Datashare"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
  { name = "Lion Summerbell", email = "lsummerbell@icij.org" }
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
  "alive-progress~=3.2.0",
  "aiostream~=0.6.4",
  "aiohttp~=3.11.9",
  "icij-common[elasticsearch]~=0.7.3",
  "python-json-logger~=4.0.0",
  "nest-asyncio~=1.6.0",
  "temporalio~=1.23.0",
  "typer~=0.15.4",
  "datashare-worker-template~=0.1",
  "tomlkit~=0.14.0",
  "hatchling~=1.27.0",
]

[project.urls]
Homepage = "https://icij.github.io/datashare-python/"
Documentation = "https://icij.github.io/datashare-python/"
Repository = "https://github.com/ICIJ/datashare-python"
Issues = "https://github.com/ICIJ/datashare-python/issues"

[project.scripts]
datashare-python = "datashare_python.__main__:main"

[build-system]
requires = [
  "hatchling",
  "tomlkit==0.14.0"
]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "datashare_python/template.py"

[tool.hatch.build.targets.sdist]
only-include = ["datashare_python"]

[tool.hatch.build.targets.wheel]
artifacts = [
  "datashare_python/worker-template.tar.gz"
]


[tool.uv]
package = true

[tool.uv.sources]
datashare-worker-template = { path = "../worker-template", editable = true }

[dependency-groups]
dev = [
  "hatch-build~=0.5.0",
  "nest-asyncio~=1.6.0",
  "pre-commit~=4.5.1",
  "psutil~=6.1.0",
  "pylint~=3.1.0",
  "pytest~=8.1",
  "pytest-asyncio~=0.24",
  "redis[hiredis]~=5.2.1",
  "ruff==0.15.2",
  "typing-extensions~=4.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration",
  "pull",
]
log_cli = 1
log_cli_level = "DEBUG"
log_file_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
