# --8<-- [start:entry_points]
# --8<-- [start:entry_points_wfs]
[project.entry-points."datashare.workflows"]
workflows = "basic_worker.workflows:WORKFLOWS"
# --8<-- [end:entry_points_wfs]

# --8<-- [start:entry_points_acts]
[project.entry-points."datashare.activities"]
activities = "basic_worker.activities:ACTIVITIES"
# --8<-- [end:entry_points_acts]
# --8<-- [start:entry_points]
