[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project]
name = "asr-worker"
dynamic = ["version"]
description = "ASR Temporal task"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
  { name = "Lion Summerbell", email = "lsummerbell@icij.org" }
]
readme = "README.md"
requires-python = ">=3.11.0, <3.13"
dependencies = [
  "datashare-python~=0.8.1",
]

[project.scripts]
asr-worker = "asr_worker.__main__:main"

[project.optional-dependencies]
cli = [
  "caul==0.3.9",
]
cpu = [
  "caul==0.3.9",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "torchcodec==0.10.0",
]
gpu = [
  "torch==2.10.0+cu128; sys_platform == 'linux'",
  "torchaudio==2.10.0+cu128; sys_platform == 'linux'",
  "torchcodec==0.10.0+cu128; sys_platform == 'linux'",
]
inference = [
  "caul[nemo]==0.3.9",
  "kaldialign==0.9.3",
  "ml-dtypes==0.5.4",
  "numpy==2.3.0",
  "pyarrow==20.0.0",
]
preprocessing = [
  "caul==0.3.9",
]

[project.entry-points."datashare.workflows"]
workflows = "asr_worker.workflows:REGISTRY"

[project.entry-points."datashare.activities"]
activities = "asr_worker.activities:REGISTRY"

[project.entry-points."datashare.dependencies"]
dependencies = "asr_worker.dependencies:REGISTRY"

[project.entry-points."datashare.worker_config_cls"]
worker_config_cls = "asr_worker.config:WORKER_CONFIG_CLS"

[dependency-groups]
dev = [
  "black>=26.1.0",
  "nest-asyncio>=1.6.0",
  "pre-commit>=4.5.1",
  "psutil>=6.1.0",
  "pylint~=3.1.0",
  "pytest~=8.1",
  "pytest-asyncio~=0.24",
  "pytest-timeout==2.4.0",
  "redis[hiredis]>=5.2.1",
  "ruff==0.15.2",
  "typing-extensions>=4.15.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
  { index = "pytorch-gpu", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
torchcodec = [
  { index = "pytorch-gpu", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
datashare-python = { path = "../../datashare-python", editable = true }


[tool.uv]
package = true
override-dependencies = [
  "kaldialign>=0.9.3",
  "torchcodec==0.10.0"
]
environments = [
  "sys_platform == 'darwin'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]
prerelease = "if-necessary"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["asr_worker"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration",
  "pull",
]
log_cli = 1
log_cli_level = "DEBUG"
log_file_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"