[project]
name = "translation-worker"
dynamic = ["version"]
description = "Translation worker implementation in Temporal"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
  { name = "Lion Summerbell", email = "lsummerbell@icij.org" }
]
readme = "README.md"
requires-python = ">=3.11.0, <3.13"

dependencies = [
  "datashare-python~=0.8.4",
  "pydantic-extra-types[pycountry]==2.11.1",
]

[project.entry-points."datashare.workflows"]
workflows = "translation_worker.workflows:WORKFLOWS"

[project.entry-points."datashare.activities"]
activities = "translation_worker.activities:ACTIVITIES"

[project.entry-points."datashare.dependencies"]
dependencies = "translation_worker.dependencies:REGISTRY"

[project.entry-points."datashare.worker_config_cls"]
worker_config_cls = "translation_worker.objects:WORKER_CONFIG_CLS"

[project.optional-dependencies]
cpu = [
  "torch==2.10.0",
]
gpu = [
  "torch==2.10.0+cu128; sys_platform == 'linux'",
]
inference = [
  "argostranslate==1.11.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", extra = "gpu" },
  { index = "pytorch-cpu", extra = "cpu" },
]
datashare-python = { path = "../../datashare-python", editable = true }

[tool.uv]
package = true
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[dependency-groups]
dev = [
  "datashare-python~=0.2",
  "nest-asyncio>=1.6.0",
  "pre-commit>=4.5.1",
  "psutil>=6.1.0",
  "pytest~=8.1",
  "pytest-asyncio~=0.24",
  "pytest-timeout==2.4.0",
  "redis[hiredis]>=5.2.1",
  "ruff==0.15.2",
  "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["translation_worker"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration",
  "pull",
]
log_cli = 1
log_cli_level = "DEBUG"
log_file_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
