[project]
name = "datashare-translation-worker"
dynamic = ["version"]
description = "Translation worker implementation in Temporal"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
  { name = "Lion Summerbell", email = "lsummerbell@icij.org" }
]
readme = "README.md"
requires-python = ">=3.11.0, <3.13"

dependencies = [
  "datashare-python~=0.9.0",
  "language-data>=1.4.0",
  "pydantic-extra-types[pycountry]==2.11.1",
]

[project.entry-points."datashare.workflows"]
workflows = "translation_worker.workflows:WORKFLOWS"

[project.entry-points."datashare.activities"]
activities = "translation_worker.activities:ACTIVITIES"

[project.entry-points."datashare.dependencies"]
dependencies = "translation_worker.dependencies:REGISTRY"

[project.entry-points."datashare.worker_config_cls"]
worker_config_cls = "translation_worker.config:WORKER_CONFIG_CLS"

[project.optional-dependencies]
inference = ['datashare-translation-worker[argos_inference]']
argos_inference = [
  "argostranslate==1.11.0",
]
hunyuan_inference = [
  "torch>=2.11.0",
  "transformers>=5.12.1",
  "accelerate>=1.14.0",
]

[tool.uv.sources]
datashare-python = { path = "../../datashare-python", editable = true }

[tool.uv]
package = true
exclude-dependencies = [
    # TODO: put me back when this is solved: https://github.com/argosopentech/argos-translate/pull/521
    #  "torch",
]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
pattern-prefix = "translation-worker-"
pattern = "default-unprefixed"

[dependency-groups]
dev = [
  "nest-asyncio>=1.6.0",
  "pre-commit>=4.5.1",
  "psutil>=6.1.0",
  "pytest~=8.1",
  "pytest-asyncio~=0.24",
  "pytest-timeout==2.4.0",
  "redis[hiredis]>=5.2.1",
  "ruff==0.15.2",
  "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["translation_worker"]

[tool.hatch.build.targets.sdist]
packages = ["translation_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "e2e",
  "integration",
  "pull",
]
log_cli = 1
log_cli_level = "DEBUG"
log_file_format = "[%(levelname)s][%(asctime)s.%(msecs)03d][%(name)s]: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
