[project]
name = "datashare-workflows-worker"
version = "0.4.33"
description = "Single workflow worker to run all datashare workflows"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11.0, <3.13"
dependencies = [
  "datashare-asr-worker==0.8.14",
  "datashare-extract-worker==0.1.3",
  "datashare-python~=0.8.20",
  "datashare-translation-worker==0.6.14",
]

[tool.hatch.build.targets.wheel]
packages = ["main"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
