[project]
name = "datashare-workflows-worker"
version = "0.5.8"
description = "Single workflow worker to run all datashare workflows"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11.0, <3.13"
dependencies = [
  "datashare-asr-worker==0.8.14",
  "datashare-extract-worker[base]==0.1.8",
  "datashare-python~=0.8.23",
  "datashare-translation-worker==0.7.3",
]

[tool.uv]
package = true
override-dependencies = [
  "huggingface-hub==1.18.0",
  "typer==0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["main"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
