[project]
name = "datashare-workflows-worker"
version = "0.5.41"
description = "Single workflow worker to run all datashare workflows"
authors = [
  { name = "Clément Doumouro", email = "cdoumouro@icij.org" },
  { name = "Clément Doumouro", email = "clement.doumouro@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11.0, <3.13"
dependencies = [
  "datashare-asr-worker==0.8.15",
  "datashare-extract-worker[base]==0.1.53",
  "datashare-python~=0.9.4",
  "datashare-translation-worker==0.7.9",
]

[tool.uv]
package = true
exclude-dependencies =  [
  "anthropic",
  "cuda-bindings",
  "cuda-pathfinde",
  "cuda-pathfinder",
  "cuda-toolkit",
  "fast-langdetect",
  "fastapi",
  "fsspec",
  "google-genai",
  "jinja2",
  "kaldialign",
  "librosa",
  "magika",
  "markupsafe",
  "networkx",
  "nvidia-cublas",
  "nvidia-cuda-cupti",
  "nvidia-cuda-nvrtc",
  "nvidia-cuda-runtime",
  "nvidia-cudnn-cu13",
  "nvidia-cufft",
  "nvidia-cufile",
  "nvidia-curand",
  "nvidia-cusolver",
  "nvidia-cusparse",
  "nvidia-cusparselt-cu13",
  "nvidia-nccl-cu13",
  "nvidia-nvjitlink",
  "nvidia-nvshmem-cu13",
  "nvidia-nvtx",
  "ocrmac",
  "opencv-python",
  "pdftext",
  "pypdf",
  "pypptx-with-oxml",
  "surya-ocr",
  "transformers",
  "triton",
  "torch",
  "torchvision",
  "uvicorn"
]
override-dependencies = [
  "huggingface-hub==1.18.0",
  "pillow==11.3.0",
  "typer==0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["main"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
